# automat

./: .gitignore  README.md  automat.py  pyproject.toml
sequences/: sample.mat  school.mat  simple.mat
